<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/splash_opacity">

        <ImageView
            android:id="@+id/topLogoImage"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/topLogoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/topLogoImage"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            style="@style/LogoText"
            />

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FormHeader"
                android:text="@string/login_form_header"/>

            <AutoCompleteTextView android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:imeActionId="@+id/login"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                style="@style/FormEditText"
                android:singleLine="true" />

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_button_label"
                style="@style/FormButton" />

            <Button android:id="@+id/create_new_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Have an invitation code ?"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textSize="17sp"
                />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>



